# tracing-setup

./: .bazelrc  .gitignore  BUILD  Cargo.toml  MODULE.bazel
src/: axum.rs  lib.rs  tonic.rs  tracing.rs
