[package]
name = "tracing-setup"
version = "0.1.0"
edition = "2021"

[dependencies]
axum-tracing-opentelemetry = "0.32.1"
opentelemetry = { version = "0.31", features = ["metrics"] }
opentelemetry-otlp = { version = "0.31.0", features = [
    "metrics",
    "logs",
    "trace",
    "grpc-tonic",
], default-features = false }
opentelemetry-resource-detectors = "0.10.0"
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio", "metrics"] }
tonic-tracing-opentelemetry = "0.32.0"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1"
tracing-opentelemetry = "0.32.0"
tracing-opentelemetry-instrumentation-sdk = { version = "0.32.1", features = [
    "tracing_level_info",
] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
